[project]
name = "langgraph-complete"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=40.11.0",
    "langchain>=1.2.12",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "langchain-together>=0.0.2.post1",
    "langgraph>=1.1.2",
    "nest-asyncio>=1.6.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
]
